tests/no_compile/repr_c_mandatory.stderr
error: `#[derive(Mmio)]` only works on repr(C) types
 --> tests/no_compile/repr_c_mandatory.rs:1:10
  |
1 | #[derive(derive_mmio::Mmio)]
  |          ^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the derive macro `derive_mmio::Mmio` (in Nightly builds, run with -Z macro-backtrace for more info)
